unpackaged/main/default/objects/Core_Attribute__c/Core_Attribute__c.object-meta.xml
<CustomObject>
    <description>Individual building blocks of the templates used to create the structures for the final configuration. The components are the pieces that are to be configured during the phases of implementation.</description>
    <label>Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>