unpackaged/main/default/objects/Core_Attribute__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <description>Alias is the attribute display name which will be shown in lightning web components</description>
    <inlineHelpText>Alias is the attribute display name which will be shown in lightning web components</inlineHelpText>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>