unpackaged/main/default/objects/Core_Attribute__c/fields/Attr_Name__c.field-meta.xml
<CustomField>
    <fullName>Attr_Name__c</fullName>
    <formula>Attribute_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attr Name</label>
    <type>Text</type>
</CustomField>