unpackaged/main/default/objects/Core_Attribute__c/fields/Attribute_Master__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Master__c</fullName>
    <label>Attribute Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.TEM_Version__c</field>
            <operation>equals</operation>
            <valueField>Attribute_Master__c.TEM_Version__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Attribute_Master__c</referenceTo>
    <relationshipLabel>Core Atributes</relationshipLabel>
    <relationshipName>Core_Atributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>