unpackaged/main/default/objects/Core_Attribute__c/fields/Base_Attribute_For_Weighted_Average_Calc__c.field-meta.xml
<CustomField>
    <fullName>Base_Attribute_For_Weighted_Average_Calc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Attribute For Weighted Average Calc</label>
    <referenceTo>Core_Attribute__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>