unpackaged/main/default/objects/Core_Attribute__c/fields/Customer_Facing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facing_Notes__c</fullName>
    <description>Information that will support the typical user questions or concerns about the entrance of the data to be entered. Meant to help the user identify the information that is being asked and guide them to perform self-discovery to better complete the data.</description>
    <label>Customer Facing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>