unpackaged/main/default/objects/Core_Attribute__c/fields/Design_Notes__c.field-meta.xml
<CustomField>
    <fullName>Design_Notes__c</fullName>
    <description>Supporting notes for the review and build out of the Implementation Wizards. Defines the supporting considerations that may require some post processing of the data submitted by the user.</description>
    <label>Design Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>