unpackaged/main/default/objects/Core_Attribute__c/fields/Dev_Attribute_Id__c.field-meta.xml
<CustomField>
    <fullName>Dev_Attribute_Id__c</fullName>
    <label>Dev Attribute Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>