unpackaged/main/default/objects/Core_Attribute__c/fields/Hide_In_Bulk_Import_Template__c.field-meta.xml
<CustomField>
    <fullName>Hide_In_Bulk_Import_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To hide Attribute to appear in bulk import template</description>
    <label>Hide In Bulk Import Template</label>
    <type>Checkbox</type>
</CustomField>