unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Alternate_Parent__c.field-meta.xml
<CustomField>
    <fullName>Is_Alternate_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alternate Parent</label>
    <type>Checkbox</type>
</CustomField>