unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Is_Asset_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Asset Name</label>
    <type>Checkbox</type>
</CustomField>