unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Default_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Picklist</label>
    <type>Checkbox</type>
</CustomField>