unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Parent_Asset__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Parent Asset</label>
    <type>Checkbox</type>
</CustomField>