unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Related_Subarray_Bifacial__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_Subarray_Bifacial__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will help to configure the attributes related to Bifacial Subarray</description>
    <label>Is Related Subarray Bifacial</label>
    <type>Checkbox</type>
</CustomField>