unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Is_Rollup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Rollup To Immediate Parent</label>
    <type>Checkbox</type>
</CustomField>