unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Rollup_To_P1_W1__c.field-meta.xml
<CustomField>
    <fullName>Is_Rollup_To_P1_W1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To indicate attribute needs rollup to highest prompts i.e P1/W1</description>
    <label>Is Rollup To P1/W1</label>
    <type>Checkbox</type>
</CustomField>