unpackaged/main/default/objects/Core_Attribute__c/fields/Is_Unique__c.field-meta.xml
<CustomField>
    <fullName>Is_Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unique</label>
    <type>Checkbox</type>
</CustomField>