unpackaged/main/default/objects/Core_Attribute__c/fields/Key_Field_To_Generate_Rows__c.field-meta.xml
<CustomField>
    <fullName>Key_Field_To_Generate_Rows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Field To Generate Rows</label>
    <type>Checkbox</type>
</CustomField>