unpackaged/main/default/objects/Core_Attribute__c/fields/Picklist_Dependency1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Dependency1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picklist Dependency</label>
    <referenceTo>Attribute_Master__c</referenceTo>
    <relationshipLabel>Attributes (Picklist Dependency)</relationshipLabel>
    <relationshipName>Attribute</relationshipName>
    <type>Lookup</type>
</CustomField>