unpackaged/main/default/objects/Core_Attribute__c/fields/Picklist_Master__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Picklist Master</label>
    <referenceTo>Picklist_Master__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Core_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>