unpackaged/main/default/objects/Core_Attribute__c/fields/Plant_Asset_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Asset_Field_Name__c</fullName>
    <label>Plant Asset Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>