unpackaged/main/default/objects/Core_Attribute__c/fields/Prompt_Information__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt Information</label>
    <referenceTo>Prompt_Information__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Core_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>