unpackaged/main/default/objects/Core_Attribute__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <label>Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>