unpackaged/main/default/objects/Core_Attribute__c/fields/Rollup_To_Parent__c.field-meta.xml
<CustomField>
    <fullName>Rollup_To_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Show prompt to which attributes need to rollup</description>
    <label>Rollup To Parent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Prompt_Information__c.Is_Plant_Information_Prompt__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Prompt_Information__c.TEM_Version__c</field>
            <operation>equals</operation>
            <valueField>$Source.TEM_Version__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prompt_Information__c</referenceTo>
    <relationshipLabel>Attributes (Rollup To Parent)</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>