unpackaged/main/default/objects/Core_Attribute__c/fields/Sensor_Type__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Type__c</fullName>
    <label>Sensor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Substation switchgear</fullName>
            </value>
            <value>
                <fullName>Metmast</fullName>
            </value>
            <value>
                <fullName>Weather Sensor</fullName>
            </value>
            <value>
                <fullName>Subsystem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>