unpackaged/main/default/objects/Core_Attribute__c/fields/Short__c.field-meta.xml
<CustomField>
    <fullName>Short__c</fullName>
    <label>Short Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>