unpackaged/main/default/objects/Core_Attribute__c/fields/Show_Alternate_Parent_in_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Show_Alternate_Parent_in_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is used only for W5A prompt, please dont use this checkbox for other prompts</inlineHelpText>
    <label>Show Alternate Parent in Prompt</label>
    <type>Checkbox</type>
</CustomField>