unpackaged/main/default/objects/Core_Attribute__c/fields/Show_Path_in_CSV_Generation__c.field-meta.xml
<CustomField>
    <fullName>Show_Path_in_CSV_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Path in CSV Generation</label>
    <type>Checkbox</type>
</CustomField>