unpackaged/main/default/objects/Core_Attribute__c/fields/Sorting_Order__c.field-meta.xml
<CustomField>
    <fullName>Sorting_Order__c</fullName>
    <label>Sorting Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>