unpackaged/main/default/objects/Core_Attribute__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>