unpackaged/main/default/objects/Core_Attribute__c/fields/Units__c.field-meta.xml
<CustomField>
    <fullName>Units__c</fullName>
    <description>The unit of measure that governs the data to be entered. Meant to establish the magnitude of user submitted information to limit accidental or misinformed data entry.</description>
    <label>Units</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ampere</fullName>
            </value>
            <value>
                <fullName>day</fullName>
            </value>
            <value>
                <fullName>degrees</fullName>
            </value>
            <value>
                <fullName>kg/m^3</fullName>
            </value>
            <value>
                <fullName>kW</fullName>
            </value>
            <value>
                <fullName>m/s</fullName>
            </value>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Volt</fullName>
            </value>
            <value>
                <fullName>W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>