unpackaged/main/default/objects/Core_Attribute__c/fields/Wind_Prompt_Attribute_Type__c.field-meta.xml
<CustomField>
    <fullName>Wind_Prompt_Attribute_Type__c</fullName>
    <label>Wind Prompt Attribute Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weather Sensor</fullName>
            </value>
            <value>
                <fullName>Subsystem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>