unpackaged/main/default/objects/Core_Attribute__c/recordTypes/Core_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Core_Attribute</fullName>
    <active>true</active>
    <label>Core Attribute</label>
</RecordType>