unpackaged/main/default/objects/Core_Attribute__c/recordTypes/Prompt_Specific_Attribute.recordType-meta.xml
<RecordType>
    <fullName>Prompt_Specific_Attribute</fullName>
    <active>true</active>
    <label>Prompt Specific Attribute</label>
</RecordType>