unpackaged/main/default/objects/Core_Attribute__c/validationRules/Check_fields_for_rollup_to_parent_proces.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_fields_for_rollup_to_parent_proces</fullName>
    <active>true</active>
    <description>Check all fields are filled for rollup to parent process</description>
    <errorConditionFormula>OR(AND(Is_Rollup_To_P1_W1__c == true, OR( ISBLANK( Rollup_To_Parent__c ), ISBLANK( Base_Attribute_For_Weighted_Average_Calc__c ))),AND(Is_Rollup_To_P1_W1__c == false, OR( NOT(ISBLANK( Rollup_To_Parent__c )), NOT(ISBLANK( Base_Attribute_For_Weighted_Average_Calc__c )))))</errorConditionFormula>
    <errorMessage>For rollup to P1/W1, &quot;Is Rollup To P1/W1&quot; checkbox, &quot;Base Attribute For Weighted Average Calc&quot; and &quot;Rollup To Parent&quot; fields are mandatory</errorMessage>
</ValidationRule>