unpackaged/main/default/objects/Core_Attribute__c/validationRules/M1SensorTypeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>M1SensorTypeCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Prompt_Information__r.Name = &#39;M.1.0 Met Mast/Station Build&#39;,
AND(NOT(ISPICKVAL(Sensor_Type__c, &#39;Metmast&#39;)), NOT(ISPICKVAL(Sensor_Type__c, &#39;&#39;))))</errorConditionFormula>
    <errorMessage>M.1.0 Met Mast/Station Build Prompt Sensor type can only have &quot;Metmast&quot;</errorMessage>
</ValidationRule>