unpackaged/main/default/objects/Core_Attribute__c/validationRules/P10ASensorTypeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>P10ASensorTypeCheck</fullName>
    <active>true</active>
    <description>Check Prompt Sensr type</description>
    <errorConditionFormula>AND(Prompt_Information__r.Name  = &#39;P.10.A Other Asset Build&#39;,
AND(NOT(ISPICKVAL(Sensor_Type__c, &#39;Substation switchgear&#39;)),NOT(ISPICKVAL(Sensor_Type__c, &#39;&#39;))))</errorConditionFormula>
    <errorMessage>P.10.A Other Asset Build Prompt Sensor type can only have &quot;Substation switchgear&quot;</errorMessage>
</ValidationRule>