unpackaged/main/default/objects/Core_Attribute__c/validationRules/Picklist_Field_Matching_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Picklist_Field_Matching_Rule</fullName>
    <active>false</active>
    <description>Validate the Picklist lookup field is not empty when the Data Type Field value is Picklist</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Data_Type__c , &quot;Picklist&quot;),
 ISBLANK(Picklist_Master__c ) 
)</errorConditionFormula>
    <errorMessage>Picklist Value is mandatory when the data type Field Value is Picklist</errorMessage>
</ValidationRule>