unpackaged/main/default/objects/Core_Attribute__c/validationRules/Restriction_for_datatype_in_parent_rollu.validationRule-meta.xml
<ValidationRule>
    <fullName>Restriction_for_datatype_in_parent_rollu</fullName>
    <active>true</active>
    <description>Rollup to parent must need to have only &quot;Decimal&quot; or &quot;Number&quot; data type</description>
    <errorConditionFormula>AND( Is_Rollup_To_P1_W1__c == true, NOT( OR( ISPICKVAL(Attribute_Master__r.Data_Type__c, &#39;Decimal&#39;), ISPICKVAL(Attribute_Master__r.Data_Type__c, &#39;Number&#39;))))</errorConditionFormula>
    <errorMessage>Rollup to parent can be only for number or decimal datatype</errorMessage>
</ValidationRule>