unpackaged/main/default/objects/Core_Attribute__c/validationRules/W3SensorTypeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>W3SensorTypeCheck</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Prompt_Information__r.Name = &#39;W.3.0 Turbine Build&#39;,
AND(NOT(ISPICKVAL(Sensor_Type__c, &#39;Weather Sensor&#39;)),NOT(ISPICKVAL(Sensor_Type__c, &#39;Subsystem&#39;)),NOT(ISPICKVAL(Sensor_Type__c, &#39;&#39;))))</errorConditionFormula>
    <errorMessage>W.3.0 Turbine Build Prompt Sensor type can only have &quot;Weather Sensor&quot; or &quot;Subsystem&quot;</errorMessage>
</ValidationRule>