unpackaged/main/default/objects/Core_Attribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attribute_Master__c</columns>
    <columns>Base_Asset_Name__c</columns>
    <columns>Prompt_Information__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TEM_Version__c</columns>
    <columns>Plant_Asset_Field_Name__c</columns>
    <columns>Alias__c</columns>
    <columns>Attr_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>